<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/my_personal_notepad"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"/>


    <TextView
        android:id="@+id/tvLastUpdateDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_update"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/tvThingsIWantToDo"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/things_i_want_done_today"
        android:layout_marginLeft="10dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"/>
</LinearLayout>
